[package]
name    = "staking_dapp"
version = "0.1.0"
authors = ["Ahmad Kaouk <ahmadkaouk.93@gmail.com"]
edition = "2021"

[dependencies]
ink        = { version = "4.1.0", default-features = false}
scale      = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }
openbrush  = { git = "https://github.com/727-Ventures/openbrush-contracts/", tag = "3.1.0", default-features = false }


[lib]
name       = "staking_dapp"
path       = "lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    # These dependencies
    "openbrush/std",
]

[profile.dev]
codegen-units = 16