[package]
name        = "psp22"
description = "A contract for a PSP-22 token"
version     = "0.1.0"
authors     = ["[Ahmad Kaouk] <[ahmadkaouk.93@gmail.com]>"]
edition     = "2021"

[dependencies]
ink = { version = "4.0.1", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = [
    "derive",
] }
scale-info = { version = "2.3", default-features = false, features = [
    "derive",
], optional = true }

[dev-dependencies]
ink_e2e = "4.0.1"

[lib]
path       = "lib.rs"
crate-type = ["cdylib"]

[features]
default           = ["std"]
std               = ["ink/std", "scale/std", "scale-info/std"]
ink-as-dependency = []
e2e-tests         = []
